validation fails return nice msg
